tests/semantic/valid/sibling_scopes.mc
{
    int left = 1;
    print left;
}
{
    float right = 2.0;
    print right;
}
