tests/semantic/invalid/multiple_errors.mc
print first;
{
    int gone = 1;
}
print gone;
if (1) {
}
